--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-particles-js": "^2.3.0",
-    "react-scripts": "1.1.5",
-    "react-tilt": "^0.1.4",
-    "tachyons": "^4.11.1"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
